add us presidents

--- a/index.yaml
+++ b/index.yaml
@@ -24,7 +24,7 @@ todo:
     - ben-bernanke        # QE, crisi 2008
     - george-w-bush       # Presidente, War on Terror, famiglia Bush
     - richard-nixon       # Nixon Shock, fine Bretton Woods
-    - bill-clinton        # Deregulation, Glass-Steagall
+    # bill-clinton - COMPLETATO
 
   # Persone nuove da ricercare e aggiungere
   persone_da_aggiungere:
